# mpitoy

./: .gitignore  API.rst  LessonsLearned.md  README.rst  db.json  micc3.cfg  pyproject.toml  pytest-mpi  run-tests.sh
docs/: Makefile  conf.py  index.rst  installation.rst
mpitoy/: __init__.py
mpitoy/domainboundary/: __init__.py
mpitoy/domaindecomposition/: __init__.py
mpitoy/mprint/: __init__.py
mpitoy/particlecontainer/: __init__.py
mpitoy/simulation/: __init__.py
tests/: __init__.py  animation.py  animation2.py  dd.py  mpihelloworld.py
tests/mpitoy/: test_mpitoy.py  test_particlecontainer.py  test_simulation.py
tests/mpitoy/domainboundary/: test_domainboundary.py
tests/mpitoy/domaindecomposition/: test_domaindecomposition.py
tests/mpitoy/mprint/: test_mprint.py
tests/mpitoy/particlecontainer/: test_particlecontainer.py
tests/mpitoy/simulation/: test_simulation.py
tests_mpi/: test_arraysendrecv_2.py  test_dd_construction.py  test_domaindecomposition_3.py  test_findGhostParticles_2.py  test_findLeavingParticles_2.py  test_particlecontainer_2.py  test_pcsendrecv_2.py  test_simulation_dd_3.py
tests_mpi/mpitoy/domaindecomposition/: test_domaindecomposition.py
tests_mpi/mpitoy/particlecontainer/: test_particlecontainer.py
tests_mpi/mpitoy/simulation/: test_simulation.py
