[tool.poetry]
name = "mpitoy"
version = "0.1.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Bert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/mpitoy"
homepage = "https://github.com/etijskens/mpitoy"

keywords = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
